--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "hostile": "^1.3.2"
+    "hostile": "^1.3.2",
+    "nginx-conf": "^1.4.0"
   }
 }
